--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
 
     <application android:allowBackup="true"
          android:icon="@drawable/ic_launcher"
-         android:label="@string/app_name">
-         <!-- android:theme="@style/AppTheme"> -->
+         android:label="@string/app_name"
+         android:theme="@style/NoActionBar">
         <activity
             android:name=".MainActivity">
+            <item android:name="android:windowActionBar">false</item>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
