--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
          android:theme="@style/NoActionBar">
         <activity
             android:name=".MainActivity">
-            <item android:name="android:windowActionBar">false</item>
+            <!-- item android:name="android:windowActionBar">false</item -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
